# GetTheNote

./: .gitignore  CMakeLists.txt  GetTheNote_en_LV.ts
include/: dialog.h
src/: dialog.cpp  main.cpp
